[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/tower/tower.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile249.png" type="Texture" id=2]
[ext_resource path="res://scenes/tower/tower_types/sniper_1.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.8515, 28.2729 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )
tower_resource = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AttackRange" type="Node2D" parent="."]

[node name="AttackRangeShowArea" type="Area2D" parent="AttackRange"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange/AttackRangeShowArea"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="AttackRange"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange/Area2D"]
shape = SubResource( 2 )

[node name="RallyPoint" type="Position2D" parent="."]

[node name="FireTimer" type="Timer" parent="."]
one_shot = true
[connection signal="mouse_entered" from="AttackRange/AttackRangeShowArea" to="." method="_on_AttackRangeShowArea_mouse_entered"]
[connection signal="mouse_exited" from="AttackRange/AttackRangeShowArea" to="." method="_on_AttackRangeShowArea_mouse_exited"]
[connection signal="body_entered" from="AttackRange/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AttackRange/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
